--- a/UI/Views/_ViewImports.cshtml
+++ b/UI/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using UI
 @using UI.Models
-@using MQ
+@using MQ.Classes
+@using MQ.Enums
 @using Newtonsoft.Json
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
